<resources>
    <string name="app_name">Total Joint Replacement</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_patient_info">Personal Info</string>

    <string name="title_section1">General Info</string>
    <string name="title_section2">Lifestyle Info</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Home</string>
    <string name="title_activity_pain_record">Pain</string>
    <string name="title_activity_activity_record">Activity</string>
    <string name="title_activity_more_activities">More Options</string>
    <string name="title_activity_custom_reminders">Custom Reminders</string>
    <string name="title_activity_assessment">Assessment</string>

    <string name="exit_button_text">Exit</string>


    <string name="pain_tab_title">Pain</string>
    <string name="activity_tab_title">Activities</string>
    <string name="progress_tab_title">Progress</string>
    <string name="feedback_tab_title">Feedback</string>


    <!--<string name="pain_6">10. Hurts Worst</string>
    <string name="pain_5">8. Hurts Whole Lot</string>
    <string name="pain_4">6. Hurts Even More</string>
    <string name="pain_3">4. Hurts Little More</string>
    <string name="pain_2">2. Hurts Little Bit</string>
    <string name="pain_1">0. No Hurt</string>-->

    <string name="pain_6">DEPRECATED</string>
    <string name="pain_5">5.\r\nExtreme</string>
    <string name="pain_4">4.\r\nSevere</string>
    <string name="pain_3">3.\r\nModerate</string>
    <string name="pain_2">2.\r\nMild</string>
    <string name="pain_1">1.\r\nNone</string>
</resources>
