<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.wpi.total_joint_replacement.fragments.PainValueFragment"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.15"
        android:layout_height="fill_parent"
        android:background="@drawable/custom_button_f"
        android:onClick="face6"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/layoutbutton6"
        android:orientation="vertical" >
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/f_transparent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:adjustViewBounds="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/pain_1"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:padding="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.15"
        android:layout_height="fill_parent"
        android:background="@drawable/custom_button_e"
        android:onClick="face5"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:id="@+id/layoutbutton5"
        android:orientation="vertical" >
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/e_transparent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:adjustViewBounds="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/pain_2"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:padding="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.15"
        android:layout_height="fill_parent"
        android:background="@drawable/custom_button_d"
        android:onClick="face4"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:id="@+id/layoutbutton4"
        android:orientation="vertical" >
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/d_transparent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:adjustViewBounds="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/pain_3"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:padding="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.15"
        android:layout_height="fill_parent"
        android:background="@drawable/custom_button_c"
        android:onClick="face3"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:id="@+id/layoutbutton3"
        android:orientation="vertical" >
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/c_transparent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:adjustViewBounds="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/pain_4"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:padding="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="0.15"
        android:background="@drawable/custom_button_b"
        android:onClick="face2"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:id="@+id/layoutbutton2"
        android:orientation="vertical">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/b_transparent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:adjustViewBounds="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/pain_5"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:padding="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.15"
        android:layout_height="fill_parent"
        android:background="@drawable/custom_button_a"
        android:onClick="face1"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:id="@+id/layoutbutton1"
        android:orientation="vertical">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/a_transparent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:adjustViewBounds="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/pain_6"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:padding="5dp"/>
    </LinearLayout>
</LinearLayout>
